k8s.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-context-deployment
  labels:
    app: code-context
spec:
  replicas: 2
  selector:
    matchLabels:
      app: code-context
  template:
    metadata:
      labels:
        app: code-context
    spec:
      containers:
        - name: code-context-container
          image: shekharpatnaik/code-context:0.14
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: code-context-service
  labels:
    app: code-context
spec:
  type: ClusterIP
  selector:
    app: code-context
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-context-ingress
  annotations:
    kubernetes.io/ingress.class: nginx            # Adjust if using a different ingress controller
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - code-context.shekharpatnaik.uk
      secretName: shekharpatnaik-uk-tls
  rules:
    - host: code-context.shekharpatnaik.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: code-context-service
                port:
                  number: 80
